<resources>
    <string name="app_name">Demo1_1</string>
    <string name="main_categories">Categories</string>
    <string name="ranking_based">Ranking</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="sort_by">Sort By</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="price">Price</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="reset">reset</string>
    <string name="apply">Apply</string>
</resources>
