<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:background="@android:color/white"
    android:clickable="true"
    tools:context=".view.FilterFragment">

    <TextView
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/sort_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:text="@string/color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyc"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:text="@string/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:id="@+id/sizespinner"
        android:background="@drawable/black_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:text="@string/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/minEdt"
            android:padding="5dp"
            android:minEms="5"
            android:inputType="number"
            android:hint="@string/min"
            android:textAlignment="center"
            android:background="@drawable/black_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/maxEdt"
            android:padding="5dp"
            android:minEms="5"
            android:inputType="number"
            android:hint="@string/max"
            android:textAlignment="center"
            android:background="@drawable/black_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:background="@android:color/holo_blue_dark"
            android:textColor="@android:color/white"
            android:id="@+id/resetTxt"
            android:text="@string/reset"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textAlignment="center"
            android:padding="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:background="@android:color/holo_green_dark"
            android:textColor="@android:color/white"
            android:id="@+id/applyTxt"
            android:textStyle="bold"
            android:text="@string/apply"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:padding="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>